--- a/language/Russian/strings.po
+++ b/language/Russian/strings.po
@@ -1311,3 +1311,255 @@ msgstr "Таймаут (сек.)"
 msgctxt "#3735"
 msgid "Wait network before the start TVH (no more than)."
 msgstr "Ожидать сеть перед стартом Tvheadend (не более чем)."
+
+########## VDR Frontend #########
+
+msgctxt "#38000"
+msgid "TV shell"
+msgstr "ТВ Оболочка"
+
+msgctxt "#3800"
+msgid "Configure VDR (Video Disk Recorder) and channels logos."
+msgstr "Настройки VDR-Frontend (Video Disk Recorder) и логотипы каналов."
+
+msgctxt "#38010"
+msgid "VDR Configuration"
+msgstr "Конфигурация VDR"
+
+msgctxt "#38011"
+msgid "Enable VDR"
+msgstr "Включить VDR"
+
+msgctxt "#3811"
+msgid "VDR is Digital Receiver (DVB-T/T2, DVB-S/S2, DVB-C) and Video Recorder with lots of features (Timeshifting, EPG, ext...)."
+msgstr "VDR это цифровой ресивер (DVB-T/T2, DVB-S/S2, DVB-C) и видеорекордер с множеством функций (например: режим отложенного просмотра, программирование таймера записи, EPG и т.д.)."
+
+msgctxt "#38012"
+msgid "Run the first VDR"
+msgstr "Загружать VDR первым"
+
+msgctxt "#3812"
+msgid "If enabled - the first VDR loaded, otherwise - Kodi."
+msgstr "Если включено - VDR будет загружен первым, иначе - первым будет загружен Kodi."
+
+msgctxt "#38013"
+msgid "Enable Debug"
+msgstr "Включить отладку"
+
+msgctxt "#3813"
+msgid "Enable debugging VDR."
+msgstr "Включить ведение журнала работы VDR."
+
+msgctxt "#38014"
+msgid "Directory for records"
+msgstr "Каталог записей"
+
+msgctxt "#3814"
+msgid "Directory for records (default: /storage/recordings)."
+msgstr "Выберите каталог для записей (по умолчанию: /storage/recordings)."
+
+msgctxt "#38015"
+msgid "Enable plugin: dvbapi"
+msgstr "Плагин: dvbapi"
+
+msgctxt "#3815"
+msgid "The plugin allows connect VDR to Wicard/Oscam. It creates a software CAM in VDR and communicates with Wicard/Oscam over camd.socket (using 'dvbapi' module)."
+msgstr "Плагин для работы с CAMD-серверами Wicard/Oscam. Плагин создает программный CAM в VDR, и общается с Wicard/Oscam через camd.socket (с помощью модуля 'dvbapi')."
+
+msgctxt "#38016"
+msgid "Enable plugin: IPTV"
+msgstr "Плагин: IPTV"
+
+msgctxt "#3816"
+msgid "This plugin integrates multicast/unicast IPTV transport streams seamlessly into VDR."
+msgstr "Этот плагин интегрирует multicast/unicast (http/udp) транспортные потоки IPTV в VDR."
+
+msgctxt "#38017"
+msgid "IPTV devices"
+msgstr "IPTV устройства"
+
+msgctxt "#3817"
+msgid "Number of devices to be created for IPTV."
+msgstr "Количество устройств, которые будут созданы для IPTV."
+
+msgctxt "#38018"
+msgid "Enable plugin: SATIP"
+msgstr "Плагин: SATIP"
+
+msgctxt "#3818"
+msgid "Integrates SAT>IP network devices seamlessly into VDR."
+msgstr "Интеграция сетевых устройств SAT>IP в VDR."
+
+msgctxt "#38019"
+msgid "Enable plugin: epgsearch"
+msgstr "Плагин: epgsearch"
+
+msgctxt "#3819"
+msgid "EPGSearch can be used to replace the standard schedule and extends this by many usefull functions."
+msgstr "EPGSearch может быть использован для замены стандартного расписания (EPG) и расширяет это многими полезными функциями."
+
+msgctxt "#38020"
+msgid "Enable plugin: streamdev-server"
+msgstr "Плагин: streamdev-server"
+
+msgctxt "#3820"
+msgid "With streamdev-server plugin you can stream live TV via network."
+msgstr "С плагином streamdev-server вы можете транслировать ТВ по сети."
+
+msgctxt "#38021"
+msgid "Enable plugin: streamdev-client"
+msgstr "Плагин: streamdev-client"
+
+msgctxt "#3821"
+msgid "With streamdev-client plugin you can receive live TV streams via network."
+msgstr "С плагином streamdev-client вы можете получать трансляцию ТВ по сети с другой машины где работает streamdev-server."
+
+msgctxt "#38022"
+msgid "Enable plugin: channelscan"
+msgstr "Плагин: channelscan"
+
+msgctxt "#3822"
+msgid "Channelscan plugin It channel scanner for VDR."
+msgstr "Сканер каналов для VDR."
+
+msgctxt "#38023"
+msgid "Enable plugin: femon"
+msgstr "Плагин: femon"
+
+msgctxt "#3823"
+msgid "Femon plugin shows DVB signal information on the OSD."
+msgstr "Femon показывает информацию о DVB сигнале на экране."
+
+msgctxt "#38024"
+msgid "Enable plugin: systeminfo"
+msgstr "Плагин: systeminfo"
+
+msgctxt "#3824"
+msgid "Systeminfo plugin shows information about the system (OS, CPU, Memory...)."
+msgstr "Systeminfo показывает информацию о системе (OS, CPU, Memory...)."
+
+msgctxt "#38025"
+msgid "Enable plugin: sleeptimer"
+msgstr "Плагин: sleeptimer"
+
+msgctxt "#3825"
+msgid "Shutdown, sleep, mute or execute a custom command after a configurable timespan."
+msgstr "Выключение, ждущий режим, отключение звука или выполнение пользовательской команды после установленного промежутка времени."
+
+msgctxt "#38026"
+msgid "Select stream plugin:"
+msgstr "Плагин вещания для KODI:"
+
+msgctxt "#3826"
+msgid "Select stream plugin for KODI PVR: xvdr, vnsiserver or none."
+msgstr "Выберите плагин вещания для KODI PVR: vnsiserver, xvdr или none для отключения."
+
+msgctxt "#38027"
+msgid "Enable plugin: tvscraper"
+msgstr "Плагин: tvscraper"
+
+msgctxt "#3827"
+msgid "Runs in the background and collects metadata for all available EPG events."
+msgstr "Работает в фоновом режиме и собирает метаданные (описание, актеры, постеры...) для всех доступных событий EPG."
+
+msgctxt "#38028"
+msgid "Enable skin: nOpacity"
+msgstr "Скин: nOpacity"
+
+msgctxt "#3828"
+msgid "nOpacity is a highly customizable native true color skin for the Video Disc Recorder."
+msgstr "nOpacity это скин для VDR с множеством настроек."
+
+msgctxt "#38029"
+msgid "Enable plugin: weatherforecast"
+msgstr "Плагин: weatherforecast"
+
+msgctxt "#3829"
+msgid "WeatherForecast provides a weather forecast based on forecast.io data."
+msgstr "WeatherForecast обеспечивает прогноз погоды на основе данных от сайта forecast.io."
+
+msgctxt "#38030"
+msgid "Enable plugin: skindesigner"
+msgstr "Плагин: skindesigner"
+
+msgctxt "#3830"
+msgid "A VDR skinning engine that displays XML based Skins."
+msgstr "Skindesigner это движок для VDR, который отображает скины основанные на формате XML."
+
+msgctxt "#38031"
+msgid "Enable plugin: tvguideng"
+msgstr "Плагин: tvguideng"
+
+msgctxt "#3831"
+msgid "TvGuideNG is a highly customizable 2D EPG viewer plugin for Skindesigner Skins."
+msgstr "TvGuideNG это настраиваемый плагин просмотра 2D EPG для Skindesigner скинов."
+
+msgctxt "#38032"
+msgid "Enable plugin: zaphistory"
+msgstr "Плагин: zaphistory"
+
+msgctxt "#3832"
+msgid "Zaphistory-plugin provide a history of the latest viewed channels with statistics informations."
+msgstr "Zaphistory плагин обеспечивает историю последних просматриваемых каналов со статистикой информацией."
+
+msgctxt "#38033"
+msgid "Enable plugin: live"
+msgstr "Плагин: live"
+
+msgctxt "#3833"
+msgid "LIVE, the LIVE Interactive VDR Environment, allows a comfortable operation of VDR and some of its plugins trough a web interface."
+msgstr "LIVE - интерактивный веб-интерфейс для VDR. Программа передач, таймеры, записи, удаленное управление.\nWeb: http://ip-address:8008\nLogin: admin\nPassword: live"
+
+### Channel logos ###
+
+msgctxt "#38050"
+msgid "VDR logos channels"
+msgstr "Логотипы каналов VDR"
+
+msgctxt "#38051"
+msgid "Logos Dir"
+msgstr "Каталог логотипов"
+
+msgctxt "#3851"
+msgid "Directory logos channels for VDR."
+msgstr "Выберите каталог для логотипов VDR."
+
+msgctxt "#38052"
+msgid "Clear Logos"
+msgstr "Удалить старые логотипы"
+
+msgctxt "#3852"
+msgid "If enabled old logos of channels will be removed."
+msgstr "Если включено, старые логотипы будут удалены."
+
+msgctxt "#38053"
+msgid "Background color"
+msgstr "Цвет фона"
+
+msgctxt "#3853"
+msgid "Background logos color."
+msgstr "Выберите из списка цвет фона для логотипов."
+
+msgctxt "#38054"
+msgid "Foreground color"
+msgstr "Цвет переднего плана"
+
+msgctxt "#3854"
+msgid "Foreground logos color."
+msgstr "Выберите из списка цвет переднего плана для логотипов."
+
+msgctxt "#38055"
+msgid "Text color"
+msgstr "Цвет текста"
+
+msgctxt "#3855"
+msgid "Text logos color."
+msgstr "Выберите из списка цвет текста для логотипов."
+
+msgctxt "#38056"
+msgid "Create logos"
+msgstr "Создать логотипы"
+
+msgctxt "#3856"
+msgid "Create logos channels for VDR."
+msgstr "Будут загружены и сконвертированы логотипы каналов для VDR. Также, будут созданы отсутствующие иконки каналов."
